MO-2060 Cleanup unused CalculatedEarlyAllocationStatus
Ticket: https://dsdmoj.atlassian.net/browse/MO-2060

Big cleanup of anything related to the DB table CalculatedEarlyAllocationStatus, as it is not used for anything meaningful and we've confirmed event and API endpoint are also not being used.

As there is SAR changes involved, this will be split into 2 PRs. This is the first one that removes the event publishing, the API endpoint, and refactor old code.

A follow-up PR sometime in the future will cleanup the DB table, model and SAR left overs.
